clang-plugin: Check non-local const qualifications for auto fixits.

This patch ensures that we check whether the underlying type is const
before issuing a fixit. This ensures that things that are typedef'ed
like const_iterator issue a correct fixit.

R=dcheng@chromium.org

Bug: 777595
Change-Id: Id0f2b97ebaa80b9893890d5ff99407c616dafb30
Reviewed-on: https://chromium-review.googlesource.com/734484
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511001}
Former-commit-id: cef8f57d4469e685e07f215d8c298d6a66d34129