tools/clang/plugins/tests/auto_raw_pointer.cpp
@@ -2,6 +2,14 @@
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
+class Iteratable {
+ public:
+  using const_iterator = int* const*;
+
+  const_iterator begin() { return nullptr; }
+  const_iterator end() { return nullptr; }
+};
+
 class Foo {
  public:
   void foo() {}
@@ -49,4 +57,8 @@ int main() {
   const auto&& const_int_ptr_rref = static_cast<int*&&>(int_ptr);
 
   static auto static_ptr = new int;
+
+  Iteratable iteratable;
+  for (auto& it : iteratable)
+    (void)it;
 }
